Bug 65908 - missing com.sun.star.view.XPrintJobListener JOB_STARTED
Summary: missing com.sun.star.view.XPrintJobListener JOB_STARTED
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-18 19:31 UTC by Tiago
Modified: 2013-07-16 13:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiago 2013-06-18 19:31:43 UTC
We noticed a bug in printer event dispatch that is derived from the source of OpenOffice. The JOB_STARTED event isn't fired since OO 3.3.

There is a equivalent bug opened in OpenOffice Apache project with a fix also. The related link is: https://issues.apache.org/ooo/show_bug.cgi?id=114817

Please include this fix in the LibreOffice source as the source seems to be the same.

Thanks,
Tiago.
Comment 1 Julien Nabet 2013-06-18 20:35:57 UTC
Tiago: thank you for having opened this useful tracker and for the link provided.

Michael: I think you might be interested by this one. The reporter attached a link to the AOoo bugtracker which also includes the fix. I checked the master sources, we have exactly the situation before AOoo fix
Comment 2 Commit Notification 2013-06-19 14:50:01 UTC
Ariel Constenla-Haile committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bf4ecd6138f07ca6207eeec306517eff4aff220e

Resolves: fdo#65908 #i114817# missing PrintableState_JOB_STARTED notification



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Tiago 2013-07-16 13:48:05 UTC
Thank you all for the fix
Is it possible to include that in 4.1.1 release ?