Resolves: fdo#65908 #i114817# missing PrintableState_JOB_STARTED notification

(cherry picked from commit 914cb68eed75ee8aa38fbf48d029057a66a21f30)

Change-Id: Icb7c304b856cfca7f80090c2d193a0b92a27bb30